Coverity analysis defect 121298: Parse warning

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v5.0
    • Sharding EMEA 2022-01-24
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /src/mongo/s/client/shard_registry.cpp:448: PW.PARAMETER_HIDDEN 121298 declaration hides parameter "opCtx" (declared at line 440)

            Assignee:
            Pierlauro Sciarelli
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: