SERVER-62386 change variable name to avoid ambiguosity

(cherry picked from commit d0f32751e8ea82c49639d2b6cad982895897beb7)